# goji

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/cli/: display.rs  mod.rs  prompt.rs  theme.rs
src/package/: json.rs  manager.rs  mod.rs  script.rs
src/runner/: exec.rs  mod.rs
tests/: integration.rs
